# zCFD_Utils

./: .gitignore  README.md  pyproject.toml  setup.py
Tutorials/: README.md  quickStartGuide.md  zCFDMeshes.ipynb
Tutorials/Examples/CaradonnaTung/: CT8_1M.py  README.md
Tutorials/Examples/DPW5/: DPW5.py  README.md
Tutorials/Examples/FlatPlate/: README.md  plate_136x96.h5  plate_coarse.h5  plate_coarse.py  plate_fine.py  plate_finer.py  plate_medium.h5  plate_medium.py
Tutorials/Examples/MDOWing/: MDO_125K.py  README.md
Tutorials/Examples/naca0012/: README.md  n0012_897_a0p0.py  n0012_897_a10p0.py  n0012_897_a15p0.py
data/: ModalModel.mat  Omesh.blk  RBF_test.m  control_cage.cba  design_space.json  displacements.xyz  domain.ctr.asa.16  domain_ordered.ctr.asa.16  loaded_beam.tec  surface.xyz  volume.xyz  zones.txt
share/: GenericModeReader.py  README.md  genericfsi.py  modalmodel.py  print_forces_batch.py
share/GenericModalCoupling/: GenericModeReader.py  NastranReader.py  genericfsi.py  genericmodalmodel.py
src/: Cmesh.LKE  MexNext_Post.py  Post_proc.py  TauTozCFD.py  UoB_coupling.py  abaqusfsi.py  cba2h5.py  cba_cart.py  convergence.m  converter.py  def_func.py  mesh_utils.py  opt_utils.py  post_proc.py  py_rbf.py  rbf_caller.py  rbf_test.asv  read_lke_bin.py  test.py  test_suite.py  zCFD_to_tec.py  zConverge.py  zLaunch.py
src/Wrappers/: ATOM_Wrapper.py
src/zcfdutils/: TauTozCFD.py  genericmodalmodel.py  integrators.py  mesh_utils.py  multiscale.py  opt_utils.py  py_rbf.py  pythonscale.py
src/zcfdutils/Wrappers/: ATOM_Wrapper.py  modeReader.py  zCFD_Wrapper.py
src/zcfdutils/boost/: CMakeLists.txt  converters.h  multiscale.cpp  multiscale.py
tests/: modal_dash_test.py  structural_integration_scheme_validation.py  test.py
